--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Automation tools for 1688.com"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "jupyterlab>=4.3.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "playwright>=1.49.0",
